keycloak/keycloak-ingress-ip-prefix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-coolcorners
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - coolcorners.org
      secretName: coolcorners-keycloak-tls
  rules:
    - host: coolcorners.org
      http:
        paths:
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak-http
                port:
                  number: 80
